--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="header">
                 <div class="div50">
                     <h5>About</h5>
-                    <h2>Make your fondest <span > memories<img id="span"src="images/Group 62.png" alt=""></span> <br> at our authentic homes!</h2>
+                    <h2>Make your fondest <span > memories<img id="span"src="IMAGES/Group 62.png" alt=""></span> <br> at our authentic homes!</h2>
                 </div>
                 <div class="div50">    
                     <p>You will always have unforgettable private spaces for friends, families and colleagues to bond and create memories in, with the luxury of certainty.</p>
@@ -45,11 +45,11 @@
                 </div>
             </div>
         <div id="box">
-            <img id="img4" src="images/Path 15296.png" alt="">
-            <img id="img5" src="images/Path 15470.png" alt="">
-            <img id="img6" src="images/Group 3135.png" alt="">
-            <img id="img7" src="images/Group 4.png" alt="">
-            <img id="img8" src="images/Path 15255.png" alt="">
+            <img id="img4" src="IMAGES/Path 15296.png" alt="">
+            <img id="img5" src="IMAGES/Path 15470.png" alt="">
+            <img id="img6" src="IMAGES/Group 3135.png" alt="">
+            <img id="img7" src="IMAGES/Group 4.png" alt="">
+            <img id="img8" src="IMAGES/Path 15255.png" alt="">
            <div class="box1">
                <p id="our">OUR STORY</p>
                <h3>Birth of SaffronStays</h3>
@@ -57,17 +57,17 @@
 
                 Rank outsiders to the hospitality industry, we decided to address the dearth of curated experiences back home. We unlocked the gates of otherwise inaccessible private vacation homes to families looking for holidays that extended beyond checklists of must-sees and must-dos. Today we service the needs of both, Home Owners and Guests. Owners who have gorgeous homes that need to be maintained and, guests who are looking for the reliability of hotel services in the luxury of a private serviced home; often a short getaway that fits into a busy schedule. We have, and always will provide unforgettable private spaces for friends, families and colleagues to bond and create memories in. We discover and unlock only the best private homes so that guests may never tire from decision fatigue and yet can take short getaways despite their busy schedules.</span>
                 <div class="writername">
-                    <img id="img9" src="images/Line 134.png" alt="">
+                    <img id="img9" src="IMAGES/Line 134.png" alt="">
                     <p id="writer">Tejas & Deven, Founders</p>
                 </div>
            </div> 
         </div>
         <footer>
             <div class="contener1">
-                <img id="images1" src="images/path108.png" alt="">
-                <img id="images2" src="images/path 15323.png" alt="">
-                <img id="images3" src="images/path 15323.png" alt="">
-                <img id="images4" src="images/path 15323.png" alt="">
+                <img id="images1" src="IMAGES/path108.png" alt="">
+                <img id="images2" src="IMAGES/path 15323.png" alt="">
+                <img id="images3" src="IMAGES/path 15323.png" alt="">
+                <img id="images4" src="IMAGES/path 15323.png" alt="">
                 <div class="box3">
                     <h2>Come, work with <br> us. We’re hiring!</h2>
                     <div class="box2">
