--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <footer>
             <div class="contener1">
                 <img id="images1" src="IMAGES/path108.png" alt="">
-                <img id="images2" src="IMAGES/path 15323.png" alt="">
-                <img id="images3" src="IMAGES/path 15323.png" alt="">
-                <img id="images4" src="IMAGES/path 15323.png" alt="">
+                <img id="images2" src="IMAGES/Path 15323.png" alt="">
+                <img id="images3" src="IMAGES/Path 15323.png" alt="">
+                <img id="images4" src="IMAGES/Path 15323.png" alt="">
                 <div class="box3">
                     <h2>Come, work with <br> us. We’re hiring!</h2>
                     <div class="box2">
